2016-02-29 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version date after merging jwunsch_edbg
	branch back into trunk

2016-02-29 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/main.cc: Improve explanation of -4 option, default EDBG to
	USB, and set debug output to line buffered mode
	* src/jtag2usb.cc: Fix packet size when passing event upstream

2016-02-26 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2usb.cc: Implement libhidapi support for EDBG-based ICEs

2016-02-22 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Add hooks for libhidapi

2015-06-24 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Uwe Frank <frank@drello.de>
	* src/devdescr.cc (ATxmega192A3): New entry
	* doc/avarice.1: Document the new entry.

2015-05-18 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Tobias Frost <tobi@debian.org>:
	Bug #34 Fix compilation with GCC 5
	* src/pragma.h: Fix pragmas for GCC > 4

2014-12-10 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version date.

2014-10-13 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/remote.cc (monitor): implement a "mon reset" command.

2014-09-19 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* tools/edbg.lua: New file.

2013-06-29 Joerg Wunsch <joerg.wunsch@atmel.com>

	* src/jtag3bp.cc (jtag3::updateBreakpoints): don't accidentally
	truncate code breakpoints to 64 KiB

2013-04-24 Joerg Wunsch <joerg.wunsch@atmel.com>

	* src/jtag2rw.cc (jtagRead, jtagWrite): Handle Xmega page sizes of
	more than 256 bytes which need to be split into multiple transfers
	on the JTAGICEmkII.

2013-04-16 Joerg Wunsch <joerg.wunsch@atmel.com>

	* src/remote.cc (talkToGdb): When returning a memory map to GDB,
	treat the possible EEPROM range just like normal RAM, so GDB
	won't refuse to load it.

2013-03-19 Joerg Wunsch <joerg.wunsch@atmel.com>

	* src/devdescr.cc (ATmega256RFR2, ATmega2564RFR2, ATmega128RFR2,
	ATmega1284RFR2, ATmega64RFR2, ATmega644RFR2):
	New devices